laborations/lab2/testsuite/bad/fun_app_incorrect_type2.cc
int main() {
  int x = foo(11, true);
  return 22;
}

int foo(double x, int y) {
  return y;
}
